--- a/style.css
+++ b/style.css
@@ -4,40 +4,51 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .more_container {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .more_container .img {
   width: 100%;
 }
+
 .more_container .more_container__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.more_container { text-align: center;
+
+.more_container {
+  text-align: center;
 }
+
 }
+
 .main_container {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
+
 .task_wrapper {
   display: flex;
 }
+
 .list {
   margin:0;
   padding: 0px;
 }
+
 .list-item,
 .list-title {
   list-style:none;
@@ -57,9 +68,11 @@
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 .btn:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 .list-title,
 .label[for="new-task"] {
@@ -71,6 +84,7 @@
   margin: 0;
   text-transform: uppercase;
 }
+
 .input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -83,6 +97,7 @@
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 .input[type="text"]:focus {
   color: #333;
 }
@@ -92,6 +107,7 @@
   display: block;
   margin: 0 0 20px;
 }
+
 #new-task{
   width: 318px;
 }
@@ -101,11 +117,11 @@
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .list-item > * {
   vertical-align: middle;
 }
@@ -113,20 +129,24 @@
 .list-item > .input[type="checkbox"] {
   margin: 0 10px;
 }
+
 .list-item > .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .list-item >  .input[type="text"] {
   width: 226px
 }
+
 .btn.delete .img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .btn.delete .btn:hover {
   transform: rotateZ(0);
 }
